tests/semantic/fact_number2/fact_number2.err
Error: Head argument is not a subtype of its declared type in file fact_number2.dl at line 8
F("1000","0002").
---------^--------
Error: Symbol constant (type mismatch) in file fact_number2.dl at line 8
F("1000","0002").
---------^--------
2 errors generated, evaluation aborted
